--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ phases:
   install:
     commands:
       - npm install time
-      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id kmskey-id --s3-bucket bucket-name --output-template-file outputSamTemplate.yaml
+      - aws cloudformation package --template-file samTemplate.yaml --kms-key-id arn:aws:kms:us-east-1:564648851972:key/3b012102-89be-48a4-a4ac-b86bcd728742 --s3-bucket codepipeline-us-east-1-552459263908 --output-template-file outputSamTemplate.yaml
 artifacts:
   type: zip
   files:
