--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -5,7 +5,7 @@ Resources:
   TimeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: index.handler
+      Handler: index.handler1
       Runtime: nodejs8.10
       CodeUri: ./
       Events:
@@ -14,3 +14,19 @@ Resources:
           Properties:
             Path: /TimeResource
             Method: GET
+  HelloWorld:
+    Type: 'AWS::Serverless::Function'
+    Properties:
+      Handler: index.handler2
+      Runtime: nodejs8.10
+      CodeUri: .
+      Description: ''
+      MemorySize: 128
+      Timeout: 3
+      Role: 'arn:aws:iam::564648851972:role/service-role/HelloWorld'
+      Events:
+        Api1:
+          Type: Api
+          Properties:
+            Path: /HelloWorld
+            Method: ANY
